[gd_scene load_steps=13 format=3 uid="uid://kt3rk6j21yg0"]

[ext_resource type="PackedScene" uid="uid://bjy6iicn28ayw" path="res://Scenes/base_level_boss_and_ui.tscn" id="1_fc2mr"]
[ext_resource type="Script" path="res://Script/Settings.gd" id="2_ct7de"]
[ext_resource type="Texture2D" uid="uid://u6lkpqmlconv" path="res://Assets/UI/Icon_Large_Audio_Grey.png" id="2_hyvyt"]
[ext_resource type="Texture2D" uid="uid://dh8kf5n7h8i7t" path="res://Assets/UI/Icon_Large_AudioOff_Blank.png" id="3_sp3ar"]
[ext_resource type="Texture2D" uid="uid://bv5007b64v16e" path="res://Assets/UI/Icon_Large_Audio_Blank.png" id="4_1skrn"]
[ext_resource type="FontFile" uid="uid://ivs72c0wtgj2" path="res://Assets/Font/TTVTechPrecomputer.ttf" id="6_tnq1d"]
[ext_resource type="Texture2D" uid="uid://qmp3fpvo2lor" path="res://Assets/UI/Icon_Large_Music_Grey.png" id="6_wmso0"]
[ext_resource type="Texture2D" uid="uid://ceyfuba1n2rbp" path="res://Assets/UI/Icon_Large_MusicOff_Blank.png" id="7_dr3jw"]
[ext_resource type="Texture2D" uid="uid://dh58xvgd248yk" path="res://Assets/UI/Icon_Large_Music_Blank.png" id="8_7ibn5"]
[ext_resource type="Texture2D" uid="uid://d2x6qv2ri14fu" path="res://Assets/UI/WideSlider_WhiteOutline_Frame.png" id="9_3ft8c"]
[ext_resource type="Texture2D" uid="uid://dkotvb76v36qb" path="res://Assets/UI/sdv.png" id="10_qyb46"]
[ext_resource type="AudioStream" uid="uid://csno8r8ymt3sg" path="res://Assets/Sounds/Click_02.ogg" id="11_4j8kv"]

[node name="Base_level_Boss_And_UI" instance=ExtResource("1_fc2mr")]
script = ExtResource("2_ct7de")

[node name="ColorRect" type="ColorRect" parent="." index="2"]
layout_mode = 0
offset_right = 507.0
offset_bottom = 255.0
color = Color(0.117647, 0.117647, 0.117647, 0.435294)

[node name="Maste Volume" type="TextureButton" parent="." index="3"]
layout_mode = 0
offset_left = 233.0
offset_top = 142.0
offset_right = 273.0
offset_bottom = 182.0
toggle_mode = true
texture_normal = ExtResource("2_hyvyt")
texture_pressed = ExtResource("3_sp3ar")
texture_hover = ExtResource("4_1skrn")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Maste Volume" index="0"]
layout_mode = 0
offset_left = -49.0
offset_top = 40.0
offset_right = 103.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("6_tnq1d")
theme_override_font_sizes/font_size = 32
text = "Master Volume"

[node name="Click1" type="AudioStreamPlayer2D" parent="Maste Volume" index="1"]
position = Vector2(-199, -118)
stream = ExtResource("11_4j8kv")
bus = &"SFX"

[node name="Music Volume" type="TextureButton" parent="." index="4"]
layout_mode = 0
offset_left = 358.0
offset_top = 35.0
offset_right = 398.0
offset_bottom = 74.0
toggle_mode = true
texture_normal = ExtResource("6_wmso0")
texture_pressed = ExtResource("7_dr3jw")
texture_hover = ExtResource("8_7ibn5")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Music Volume" index="0"]
layout_mode = 0
offset_left = -49.0
offset_top = 39.0
offset_right = 103.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("6_tnq1d")
theme_override_font_sizes/font_size = 32
text = "Music Volume"

[node name="SFX Volume" type="TextureButton" parent="." index="5"]
layout_mode = 0
offset_left = 86.0
offset_top = 31.0
offset_right = 126.0
offset_bottom = 71.0
toggle_mode = true
texture_normal = ExtResource("2_hyvyt")
texture_pressed = ExtResource("3_sp3ar")
texture_hover = ExtResource("4_1skrn")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="SFX Volume" index="0"]
layout_mode = 0
offset_left = -30.0
offset_top = 40.0
offset_right = 86.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("6_tnq1d")
theme_override_font_sizes/font_size = 32
text = "SFX Volume"

[node name="Back" type="TextureButton" parent="." index="6"]
layout_mode = 0
offset_left = 7.0
offset_top = 213.0
offset_right = 82.0
offset_bottom = 245.0
texture_normal = ExtResource("9_3ft8c")
texture_hover = ExtResource("10_qyb46")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Back" index="0"]
layout_mode = 0
offset_left = 2.0
offset_top = -3.0
offset_right = 72.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_tnq1d")
theme_override_font_sizes/font_size = 16
text = "Back
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Click2" type="AudioStreamPlayer2D" parent="Back" index="1"]
position = Vector2(-199, -118)
stream = ExtResource("11_4j8kv")
bus = &"SFX"

[connection signal="pressed" from="Maste Volume" to="." method="_on_maste_volume_pressed"]
[connection signal="pressed" from="Music Volume" to="." method="_on_music_volume_pressed"]
[connection signal="pressed" from="SFX Volume" to="." method="_on_sfx_volume_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="finished" from="Back/Click2" to="." method="_on_click_2_finished"]
